--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <p>Shamim Shaharia Shoyeb</p>
+    <h1>Shamim Shaharia Shoyeb</h1>
+    <h3>Sust</h3>
     <img src="a.jpg">
 </body>
 </html>
